Fix Clipping Text #2
- this commit is a follow up to the previous commit. It fixes the clipping for devices between 600px and 380px widths

--- a/src/index.css
+++ b/src/index.css
@@ -1136,6 +1136,7 @@ input::placeholder {
     margin: 0 0 0 0;
     -webkit-text-stroke: unset;
     text-stroke: unset;
+    padding: 0;
   }
 
   .choice-text:hover {
@@ -1146,11 +1147,11 @@ input::placeholder {
   }
 
   .long-choice-text {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 
   .super-long-choice-text {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 
   .extremely-long-choice-text {
